Added 2-way data binding with ngModel

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,4 +1,11 @@
 <h1>Todays weather!</h1>
 
 <h2>Feels like : {{weather.feelsLikeInF}}</h2>
-<h2>Condition : {{weather.condition}}</h2>
+<h2>Condition : {{weather.condition | uppercase}}</h2>
+
+<div>
+    <label>
+        Condition : 
+        <input [(ngModel)]="weather.condition" placeholder="condition" />
+    </label>
+</div>
