Adding ngFor to display list of suggestions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-hello world from app.component.html!
-<app-weather></app-weather>
+<div>
+  <app-weather></app-weather>
+</div>
+<div>
+  <app-suggestions></app-suggestions>
+</div>
