--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,7 +1,7 @@
-<h1>Todays weather!</h1>
+<h3>Todays weather</h3>
 
-<h2>Feels like : {{weather.feelsLikeInF}}</h2>
-<h2>Condition : {{weather.condition | uppercase}}</h2>
+<div>Feels like : {{weather.feelsLikeInF}}</div>
+<div>Condition : {{weather.condition | uppercase}}</div>
 
 <div>
     <label>
