Add ngIf to check if number of suggestions > 3

--- a/src/app/suggestions/suggestions.component.html
+++ b/src/app/suggestions/suggestions.component.html
@@ -6,3 +6,13 @@
         </li>
     </ul>
 </div>
+<div *ngIf="suggestions!==undefined && suggestions.length > 3; 
+            else lessSuggestions"> 
+    There are MORE than 3 suggestions
+</div>
+
+<ng-template #lessSuggestions>
+    <div>
+        There are LESS than 3 suggestions
+    </div>
+</ng-template>
